# quranbot

./: .dockerignore  .flake8  .flakeheaven_baseline  .gitignore  .nitpick-style.toml  .yaspellerrc  Dockerfile  Makefile  README.md  config.py  content.py  db.json.REMOVED.git-id  db.sqlite3.REMOVED.git-id  docker-compose.yml  env_vars  env_vars.ci  input.txt  lint_script.sh  manage.py  pyproject.toml  pytest.ini  renovate.json  req.txt  requirements.txt  setup.cfg  tbot.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
admin_frontend/: .editorconfig  .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
admin_frontend/pages/: index.vue  vue-admin.vue
admin_frontend/src/: App.vue  main.js
admin_frontend/src/components/: Navbar.vue
admin_frontend/src/router/: index.js
admin_frontend/src/views/: Main.vue
apps/api/: api_docs.py  paginators.py  serializers.py  urls.py  views.py
apps/api/exceptions/: chat_id_or_city_not_gived.py
apps/api/schemas/: swagger_schemas.py
apps/bot_init/: admin.py  apps.py  bot_handlers.py  exceptions.py  markup.py  models.py  schemas.py  service.py  tasks.py  urls.py  utils.py  views.py
apps/content/: admin.py  apps.py  models.py  parsers.py  podcast_parser.py  service.py  tasks.py  urls.py  views.py
apps/prayer/: admin.py  apps.py  models.py  parsers.py  schemas.py  service.py  tasks.py
bot/: admin.py  apps.py  data.json.REMOVED.git-id  models.py  tasks.py  urls.py  utils.py  views.py
bot_init/: admin.py  apps.py  exceptions.py  handle_service.py  markup.py  models.py  schemas.py  service.py  tasks.py  text_message_service.py  urls.py  utils.py  views.py
bot_init/migrations/: 0002_auto_20200729_0103.py  0003_auto_20200729_0106.py  0005_auto_20200729_0234.py  0008_auto_20200808_2057.py  0010_auto_20200810_1016.py  0012_auto_20200811_2313.py  0014_auto_20200822_2213.py  0016_merge_20200822_2215.py  0017_auto_20200903_2133.py  0018_subscriber_step.py
bot_init/services/: handle_service.py  inline_search_service.py  text_message_service.py
bot_init/tests/: test_bot_init_service.py  test_text_service.py
config/: .env.template  celery.py  settings.py  test_runner.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
config/splitted_settings/: allowed_hosts.py  boilerplate.py  cors.py  db.py  environ.py  installed_apps.py  logger.py  middlewares.py  rest_framework.py  static.py
content/: admin.py  models.py  parsers.py  service.py  tasks.py  tests.py  urls.py  views.py
content/migrations/: 0002_auto_20200802_2052.py  0003_auto_20200804_2057.py  0004_remove_podcast_is_flag.py  0005_auto_20200808_1831.py  0007_auto_20200808_1917.py  0009_auto_20200814_1944.py  0011_auto_20200903_1939.py  0012_remove_ayat_link_to_source.py
content_gen/: apps.py  urls.py  views.py
deploy/: datadog.yaml  deploy.md  dump.py  dump.sql.gz.REMOVED.git-id  dump1.py  gunicorn.conf.py  qbot.conf  qbot_db.sql.REMOVED.git-id  qbot_db.sql.gz.REMOVED.git-id  qbot_nginx.conf  restart.sh  supervisor_qbot.conf  supervisor_qbot_beat.conf  supervisor_qbot_worker.conf
deploy/python.d/: conf.yml
docker/: docker-compose.prod.yml
docker/dev/: docker-compose.yml
docker/django/: Dockerfile  gunicorn_config.py
docs/: conf.py  deploy.md  dev.md
go_utils/: check_users.go
prayer/: admin.py  models.py  parsers.py  schemas.py  service.py  tasks.py  tests.py
prayer/migrations/: 0001_initial.py  0002_auto_20200810_0924.py  0005_auto_20200810_1606.py  0006_auto_20200811_1852.py
quranbot/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
quranbot/settings/: __init__.py  base.py  dev.py  prod.py
scripts/: lint.py
server/: asgi.py  urls.py  wsgi.py
server/settings/: __init__.py
templates/: content_gen.html  content_gen_vue.html
tests/: conftest.py  test_create_mailing.py  test_version.py
tests/api/: conftest.py  smoke_test.py  test_auth.py  test_delete_mailing.py  test_determine_winners.py  test_get_ayat_detail.py  test_get_ayats_which_not_used_in_morning_content.py  test_get_data_for_usage_graphic.py  test_get_mailings.py  test_get_ping_to_message.py  test_get_referal_link.py  test_getting_city_timezone.py  test_getting_prayer_time_by_timezone.py  test_non_existent_city.py  test_referal_subscribe.py  test_referals_count.py  test_subscribers_count.py
tests/bot_init/: conftest.py  test_answer.py  test_bot_init_service.py  test_command_service.py  test_concourse_button.py  test_determine_winners.py  test_get_admins_list.py  test_get_referal_link.py  test_getting_podcast.py  test_referal_subscribe.py  test_referals_count.py  test_send_document.py  test_start_message_controller.py  test_subscribe.py  test_subscriber_actions.py  test_text_service.py  test_translate_ayat_into_answer.py
tests/content/: conftest.py  test_ayat_search.py  test_format_ayats_count.py  test_generate_keyboard_for_first_ayat.py  test_get_ayat_by_sura_ayat.py  test_get_morning_content.py  test_get_unused_ayats.py  test_morning_content_creator.py  tests.py
tests/prayers/: conftest.py  test_generate_prayers_for_next_day.py  test_getting_city_timezone.py  test_getting_prayer_time_by_timezone.py  test_non_existent_city.py  test_parser.py  test_send_tomorrow_prayer_time.py  tests.py
tests/test_server/: test_urls.py
(+277 files in other folders)
