[tool.poetry]
name = "quranbot"
description = "quranbot"
version = "3.0.0"
readme = "README.md"
authors = ["quranbot.ilaletdinov.ru"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"

django = { version = "4.1.6", extras = ["argon2"] }
django-split-settings = "1.2"
django-axes = "5.40.1"
django-csp = "3.7"
django-health-check = "3.17.0"
django-http-referrer-policy = "1.1.1"
django-permissions-policy = "4.14"
django-stubs-ext = "0.7"

psycopg2-binary = "2.9"
gunicorn = "20.0"
python-decouple = "3.7"
structlog = "22.3"
httpx = "0.23.3"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "3.6"
django-querycount = "0.7"
django-migration-linter = "4.1"
django-extra-checks = "0.12"
nplusone = "1.0"

wemake-python-styleguide = "0.17"
flake8-pytest-style = "1.6"
flake8-django = "1.1"
flake8-logging-format = "0.7.5"
nitpick = "0.32"
doc8 = "1.0"

pytest = "7.1"
pytest-django = "4.5"
pytest-cov = "4.0"
django-coverage-plugin = "2.0"
pytest-randomly = "3.12"
pytest-timeout = "2.1"
django-test-migrations = "1.2"
hypothesis = "6.54"

mypy = "1.0"
django-stubs = "1.13"

yamllint = "1.27"
safety = "2.1"
dotenv-linter = "0.4"
polint = "0.4"
dennis = "1.1"
dump-env = "1.3"
ipython = "8.4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "5.1"
sphinx-autodoc-typehints = "1.19"
tomli = "2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.17.0/styles/nitpick-style-wemake.toml",
  ".nitpick-style.toml",
]
