[tool.poetry]
name = "quranbot"
description = "quranbot"
version = "3.0.0"
readme = "README.md"
authors = ["quranbot.ilaletdinov.ru"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"

django = { version = "4.2", extras = ["argon2"] }
django-split-settings = "1.2"
django-axes = "5.41.1"
django-csp = "3.7"
django-health-check = "3.17.0"
django-http-referrer-policy = "1.1.1"
django-permissions-policy = "4.15.0"
django-stubs-ext = "0.8.0"

gunicorn = "20.1.0"
python-decouple = "3.8"
structlog = "23.1.0"
httpx = "0.24.0"
psycopg = {extras = ["binary"], version = "3.1.8"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.0.0"
django-querycount = "0.8.3"
django-migration-linter = "4.1"
django-extra-checks = "0.13.3"
nplusone = "1.0"

wemake-python-styleguide = {git = "https://github.com/wemake-services/wemake-python-styleguide", branch="master"}
flake8-pytest-style = "1.7.2"
flake8-django = "1.2"
flake8-logging-format = "0.9.0"
nitpick = "0.32"
doc8 = "1.1.1"

pytest = "7.3.1"
pytest-django = "4.5.2"
pytest-cov = "4.0"
django-coverage-plugin = "3.0.0"
pytest-randomly = "3.12"
pytest-timeout = "2.1"
django-test-migrations = "1.2"
hypothesis = "6.72.1"

mypy = "1.2.0"
django-stubs = "1.16.0"

yamllint = "1.31.0"
safety = "2.3.5"
dotenv-linter = "0.4"
polint = "0.4"
dennis = "1.1"
dump-env = "1.4.0"
ipython = "8.12.0"
flake8-copyright = "0.2.4"
respx = "0.20.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "5.1"
sphinx-autodoc-typehints = "1.19"
tomli = "2.0.1"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.17.0/styles/nitpick-style-wemake.toml",
  ".nitpick-style.toml",
]
